{
    "version": 1,
    "name": "Controls",
    "maps": [
        {
            "name": "ShipControls",
            "id": "0fbd8b6c-ec99-4875-817f-0be44c83b534",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "351baf26-b7c2-4ff9-a4d9-4e7eac73e806",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AttachModule",
                    "type": "Button",
                    "id": "d6fd8ad1-20d4-4afe-8c98-01f952d4c9c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateModule",
                    "type": "Button",
                    "id": "8eeffa8f-44b8-457a-945d-8da0ba1ef7b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleModuleAnchor",
                    "type": "Button",
                    "id": "6f4ed0bc-9267-48e3-9ea9-68aca9eab54e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleModule",
                    "type": "Button",
                    "id": "85c50af4-b29f-4dda-bafb-fae5786d397d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "4782ff89-0431-4230-8d40-b7b45eb5334d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RestartGame",
                    "type": "Button",
                    "id": "3a889822-0d1e-4c0e-8822-192d77dc7b29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "ecb769f8-3a3f-45b2-b873-608d20edba7e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "QuickNextFireMode",
                    "type": "Button",
                    "id": "2df832f6-12d4-49ad-abfa-0421099ae4b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireModeCanons",
                    "type": "Button",
                    "id": "6f81c1be-1d29-44cf-9fee-380b29aa9e51",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireModeMissiles",
                    "type": "Button",
                    "id": "3d9a9e2a-dbb6-4b89-ba24-970d12d51de6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireModePD",
                    "type": "Button",
                    "id": "e5dfec2f-8a6a-4ef9-aabf-7a213a7c68be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "94114962-fdc1-4b50-8522-c66b02e02364",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "46abce08-779f-45d8-bd28-fc095714ff03",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4deb22f9-99c8-4131-81a1-0bf30782583a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4d8e8642-dfea-41ca-a5f9-650977d3c6e8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6cf39cec-d918-4cf5-8296-2aee2c49de6d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0c3b11d3-b27d-4c1e-932b-e00c89c33ca8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "db93ee41-2295-4a92-8c9d-1ed15924609f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "874aeede-e884-497e-9636-e90c7ea237e8",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "abf7257e-db93-4c81-9e5e-0af2f9ce4a51",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d51a7f56-d250-4d29-a907-1a9e186a4af4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8d78d1d1-9db4-47c3-8523-b82483580aa8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ccda0af1-6921-4d7a-a721-108c03179a1f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttachModule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc5d9619-852a-40e6-b756-21a843b64138",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateModule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "893b4efb-4b17-482b-baa2-05e90346a8e3",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleModuleAnchor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7394dda8-9e8e-4f2e-8d1d-b9e058e9f9c4",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleModule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd068ccb-5454-41c9-bf3e-ebf7bff6dc51",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e7b7076-0ccf-4dff-a7b7-932fc92acbb9",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c460ca5-7312-4791-9441-22d49ff66c1b",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edb18579-b156-43cf-9fbf-9e3bb800cc5b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickNextFireMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46857c6d-9eec-4b3d-bbed-f7a8e7eab700",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireModeCanons",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7788192f-24e1-47d1-b9d9-9b6cd653e1bd",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireModeMissiles",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5261acc2-eade-42f2-b4b7-320bcb04fdbd",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireModePD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cc7bc0d-3a75-42cc-a7ec-76c4b3dc3889",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}